<resources>
    <string name="app_name">Bichano</string>
    <string name="content_cao">Content do cão</string>
    <string name="content_logo">Content do logo</string>
    <string name="content_gato">Content do gato</string>
    <string name="content_vaca">Content da vaca</string>
    <string name="content_ovelha">Content da ovelha</string>
    <string name="content_leao">Content do leao</string>
    <string name="content_macaco">Content do macaco</string>
    <string name="txt_escolhe_animal">Escolha um animal</string>
    <string name="bichano_parada">Parei o bichano !</string>
    <string name="bichano_pronto">O bichano tá pronto !</string>
    <string name="bichano_destruido">Destrui o bichano !!</string>
    <string name="bichano_iniciado">Iniciei o bichano !!</string>
</resources>
