<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5e9b9"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:contentDescription="@string/content_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.030" />

    <ImageView
        android:id="@+id/imgCao"
        android:contentDescription="@string/content_cao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cao"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageView
        android:id="@+id/imgGato"
        android:contentDescription="@string/content_gato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gato"
        android:layout_marginTop="100dp"
        android:layout_marginRight="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/imgVaca"
        android:contentDescription="@string/content_vaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vaca"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageView
        android:id="@+id/imgOvelha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ovelha"
        android:layout_marginTop="210dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/content_ovelha"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/imgLeao"
        android:contentDescription="@string/content_leao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/leao"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <ImageView
        android:id="@+id/imgMacaco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/macaco"
        android:contentDescription="@string/content_macaco"
        android:layout_marginTop="350dp"
        android:layout_marginRight="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/direitos"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.980"
        />

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/txt_escolhe_animal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.120" />

</android.support.constraint.ConstraintLayout>